# ml1

./: .gitignore  CMakeLists.txt  Makefile  README.md  franke.asy  report.tex  sources.bib  tif2txt.py
data/: geography.txt  geography_beta
figs/: franke.asy  geography.asy  geography_approx.asy  verification.asy
programs/: complexity.f90  geography.f90  lasso.py  noise.f90  regularisation.f90  test.f90  verification.f90
