cmake_minimum_required(VERSION 3.9)
project(1)
enable_language(Fortran)

find_package(LAPACK REQUIRED)

if(NOT CMAKE_BUILD_TYPE)
    set(CMAKE_BUILD_TYPE Release)
endif()

if(CMAKE_Fortran_COMPILER_ID MATCHES GNU)
    set(CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS} -Wall -Wextra")
    set(CMAKE_Fortran_FLAGS_DEBUG "${CMAKE_Fortran_FLAGS_DEBUG} -fcheck=all")
    set(CMAKE_Fortran_FLAGS_RELEASE "${CMAKE_Fortran_FLAGS_RELEASE} -march=native")
endif()

file(GLOB lib_files ${CMAKE_CURRENT_SOURCE_DIR}/lib/*.f90)
set(libs polyfitter2d ridge2d)
set(tmp_libs ${LAPACK_LIBRARIES})
foreach(lib ${libs})
    add_library(${lib} ${CMAKE_CURRENT_SOURCE_DIR}/lib/${lib}.f90)
    target_link_libraries(${lib} ${tmp_libs})
    list(APPEND tmp_libs ${lib})
endforeach(lib)
list(APPEND libs ${LAPACK_LIBRARIES})

file(GLOB prog_files ${CMAKE_CURRENT_SOURCE_DIR}/programs/*.f90)
foreach(prog_file ${prog_files})
    get_filename_component(prog_name ${prog_file} NAME_WE)
    add_executable(${prog_name} ${prog_file})
    target_link_libraries(${prog_name} ${libs})
endforeach(prog_file)
